--- a/total_experiment/analysis/gurobi.Rmd
+++ b/total_experiment/analysis/gurobi.Rmd
@@ -7,9 +7,14 @@ output: html_document
 
 ```{r}
 library(tidyverse)
-df = read.csv('/data/home/wangzz/github/splicing-universal-experiment/total_experiment/results/gurobi_experiment.csv')
+df = read.csv('/home/wangzz/github/splicing-universal-experiment/total_experiment/results/gurobi_experiment.csv')
 df = as_tibble(df) #%>% filter(snr==1)
 ```
+```{r}
+df_new = read.csv('/home/wangzz/github/splicing-universal-experiment/total_experiment_new/gurobi_experiment.csv')
+df_new = as_tibble(df_new) #%>% filter(snr==1)
+```
+
 
 ```{r}
 df2 = bind_rows(
@@ -18,7 +23,10 @@ df2 = bind_rows(
     mutate(method = 'GUROBI'),
   df %>% 
     select(n, p, k, time = SCOPE_time, accuracy = SCOPE_accuracy) %>% 
-    mutate(method = 'SCOPE')  
+    mutate(method = 'SCOPE'),  
+  df_new %>% 
+    select(n, p, k, time = time, accuracy = accuracy) %>% 
+    mutate(method = 'SCOPE_new'), 
 ) 
 ```
 
