--- a/skscope_result_new/plot.ipynb
+++ b/skscope_result_new/plot.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -268,190 +268,107 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>model</th>\n",
        "      <th>method</th>\n",
-       "      <th>jit</th>\n",
-       "      <th>ising</th>\n",
        "      <th>linear</th>\n",
        "      <th>logistic</th>\n",
-       "      <th>multitask</th>\n",
-       "      <th>non_linear</th>\n",
        "      <th>trend_filter</th>\n",
+       "      <th>multitask</th>\n",
+       "      <th>ising</th>\n",
+       "      <th>non_linear</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>FoBa</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.998</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.916</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>FoBa</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.998</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.916</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>GraSP</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.994</td>\n",
-       "      <td>0.999</td>\n",
-       "      <td>0.871</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.776</td>\n",
-       "      <td>0.584</td>\n",
+       "      <th>4</th>\n",
+       "      <td>OMP</td>\n",
+       "      <td>2.45(0.68)</td>\n",
+       "      <td>1.66(0.67)</td>\n",
+       "      <td>1.6(0.65)</td>\n",
+       "      <td>4.07(0.48)</td>\n",
+       "      <td>2.86(0.86)</td>\n",
+       "      <td>11.53(3.61)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>GraSP</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.994</td>\n",
-       "      <td>0.999</td>\n",
-       "      <td>0.871</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.776</td>\n",
-       "      <td>0.588</td>\n",
+       "      <td>IHT</td>\n",
+       "      <td>3.42(0.88)</td>\n",
+       "      <td>1.06(0.67)</td>\n",
+       "      <td>2.8(1.35)</td>\n",
+       "      <td>1.24(0.23)</td>\n",
+       "      <td>3.24(1.43)</td>\n",
+       "      <td>6.37(2.32)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>HTP</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.974</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.835</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.775</td>\n",
-       "      <td>0.406</td>\n",
+       "      <td>4.14(1.25)</td>\n",
+       "      <td>2.37(0.92)</td>\n",
+       "      <td>1.71(0.85)</td>\n",
+       "      <td>21.5(4.56)</td>\n",
+       "      <td>5.26(2.03)</td>\n",
+       "      <td>10.82(7.86)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GraSP</td>\n",
+       "      <td>1.16(0.38)</td>\n",
+       "      <td>12.7(8.2)</td>\n",
+       "      <td>1.74(0.74)</td>\n",
+       "      <td>0.87(0.31)</td>\n",
+       "      <td>1.02(0.44)</td>\n",
+       "      <td>7.34(2.75)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FoBa</td>\n",
+       "      <td>11.7(2.9)</td>\n",
+       "      <td>6.31(2.15)</td>\n",
+       "      <td>1.89(0.84)</td>\n",
+       "      <td>6.65(0.65)</td>\n",
+       "      <td>11.59(3.55)</td>\n",
+       "      <td>31.26(8.8)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>HTP</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.974</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.835</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.775</td>\n",
-       "      <td>0.404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>IHT</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.955</td>\n",
-       "      <td>0.792</td>\n",
-       "      <td>0.972</td>\n",
-       "      <td>0.966</td>\n",
-       "      <td>0.775</td>\n",
-       "      <td>0.076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>IHT</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.955</td>\n",
-       "      <td>0.792</td>\n",
-       "      <td>0.972</td>\n",
-       "      <td>0.966</td>\n",
-       "      <td>0.775</td>\n",
-       "      <td>0.076</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>OMP</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.980</td>\n",
-       "      <td>0.998</td>\n",
-       "      <td>0.908</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.774</td>\n",
-       "      <td>0.702</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>OMP</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.980</td>\n",
-       "      <td>0.998</td>\n",
-       "      <td>0.908</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.774</td>\n",
-       "      <td>0.702</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
        "      <td>SCOPE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.996</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.935</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.773</td>\n",
-       "      <td>0.790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>SCOPE</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.997</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.935</td>\n",
-       "      <td>1.000</td>\n",
-       "      <td>0.773</td>\n",
-       "      <td>0.790</td>\n",
+       "      <td>2.11(0.7)</td>\n",
+       "      <td>3.24(2.67)</td>\n",
+       "      <td>2.85(1.29)</td>\n",
+       "      <td>7.28(4.84)</td>\n",
+       "      <td>1.69(0.67)</td>\n",
+       "      <td>8.6(2.7)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "model method    jit  ising  linear  logistic  multitask  non_linear  \\\n",
-       "0       FoBa  False  0.998   1.000     0.916      1.000       0.772   \n",
-       "1       FoBa   True  0.998   1.000     0.916      1.000       0.772   \n",
-       "2      GraSP  False  0.994   0.999     0.871      1.000       0.776   \n",
-       "3      GraSP   True  0.994   0.999     0.871      1.000       0.776   \n",
-       "4        HTP  False  0.974   1.000     0.835      1.000       0.775   \n",
-       "5        HTP   True  0.974   1.000     0.835      1.000       0.775   \n",
-       "6        IHT  False  0.955   0.792     0.972      0.966       0.775   \n",
-       "7        IHT   True  0.955   0.792     0.972      0.966       0.775   \n",
-       "8        OMP  False  0.980   0.998     0.908      1.000       0.774   \n",
-       "9        OMP   True  0.980   0.998     0.908      1.000       0.774   \n",
-       "10     SCOPE  False  0.996   1.000     0.935      1.000       0.773   \n",
-       "11     SCOPE   True  0.997   1.000     0.935      1.000       0.773   \n",
+       "model method      linear    logistic trend_filter   multitask        ising  \\\n",
+       "4        OMP  2.45(0.68)  1.66(0.67)    1.6(0.65)  4.07(0.48)   2.86(0.86)   \n",
+       "3        IHT  3.42(0.88)  1.06(0.67)    2.8(1.35)  1.24(0.23)   3.24(1.43)   \n",
+       "2        HTP  4.14(1.25)  2.37(0.92)   1.71(0.85)  21.5(4.56)   5.26(2.03)   \n",
+       "1      GraSP  1.16(0.38)   12.7(8.2)   1.74(0.74)  0.87(0.31)   1.02(0.44)   \n",
+       "0       FoBa   11.7(2.9)  6.31(2.15)   1.89(0.84)  6.65(0.65)  11.59(3.55)   \n",
+       "5      SCOPE   2.11(0.7)  3.24(2.67)   2.85(1.29)  7.28(4.84)   1.69(0.67)   \n",
        "\n",
-       "model  trend_filter  \n",
-       "0             0.870  \n",
-       "1             0.870  \n",
-       "2             0.584  \n",
-       "3             0.588  \n",
-       "4             0.406  \n",
-       "5             0.404  \n",
-       "6             0.076  \n",
-       "7             0.076  \n",
-       "8             0.702  \n",
-       "9             0.702  \n",
-       "10            0.790  \n",
-       "11            0.790  "
+       "model   non_linear  \n",
+       "4      11.53(3.61)  \n",
+       "3       6.37(2.32)  \n",
+       "2      10.82(7.86)  \n",
+       "1       7.34(2.75)  \n",
+       "0       31.26(8.8)  \n",
+       "5         8.6(2.7)  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"skscope_experiment_jit.csv\")\n",
-    "df.groupby(['method', 'jit', 'model'])['accuracy'].mean().round(3).unstack().reset_index()"
+    "df[df.jit == True].groupby(['method', 'model'])['time'].apply(\n",
+    "    lambda x: str(x.mean().round(2)) + \"(\" + str(x.std().round(2)) + \")\"\n",
+    ").unstack().reset_index().iloc[[4,3,2,1,0,5], [0,2,3,6,4,1,5]]"
    ]
   },
   {
